--- a/lang/development-assistant.pot
+++ b/lang/development-assistant.pot
@@ -5,7 +5,7 @@ msgstr ""
 "POT-Creation-Date: 2025-01-20 04:30+0200\n"
 "PO-Revision-Date: 2021-04-25 23:55+0300\n"
 "Last-Translator: \n"
-"Language-Team: Dmitry Pripa\n"
+"Language-Team: OmgPress\n"
 "Language: en\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
